--- a/web/service-generator/tsconfig.json
+++ b/web/service-generator/tsconfig.json
@@ -22,7 +22,7 @@
         "outDir": "./dist"
     },
     "include": [
-        "./src/**/*"
+        "./src/index.ts"
     ],
     "exclude": [
         "./node_modules/**/*",
