--- a/pkg/test/testdata/testdata/alerting/node_exporter/config.yaml
+++ b/pkg/test/testdata/testdata/alerting/node_exporter/config.yaml
@@ -15,14 +15,14 @@ scrape_configs:
 
     static_configs:
       - targets:
-          - "localhost:{{ .ListenPort }}"
+          - "127.0.0.1:{{ .ListenPort }}"
   {{range .Jobs}}
   - job_name: "{{ .JobName }}"
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
     static_configs:
       - targets:
-          - "localhost:{{ .ScrapePort }}"
+          - "127.0.0.1:{{ .ScrapePort }}"
   {{end}}
 
 # When running prometheus in Agent mode, remote-write is required.
