--- a/dagger/ci/defaults.toml
+++ b/dagger/ci/defaults.toml
@@ -21,7 +21,7 @@ test = true
 [images.opensearch.build]
 	dashboards-version = "2.8.0"
 	opensearch-version = "2.8.0"
-	plugin-version = "0.11.0-rc4"
+	plugin-version = "0.11.0"
 
 [images.opensearch.dashboards]
 	repo = "docker.io/rancher/opensearch-dashboards"
