--- a/web/service-generator/package.json
+++ b/web/service-generator/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@bufbuild/protobuf": "^1.2.1",
+    "@bufbuild/protoc-gen-es": "^1.3.0",
     "@bufbuild/protoplugin": "^1.2.1"
   },
   "devDependencies": {
