Upgrade to latest prometheus agent

--- a/packages/opni/opni/charts/values.yaml
+++ b/packages/opni/opni/charts/values.yaml
@@ -49,7 +49,7 @@ gateway:
   s3:
     internal: {}
 
-opni-prometheus-crd:
+prometheus-crds:
   enabled: false # set to false if `opni-agent.kube-prometheus-stack.enabled` is true
 
 opni-agent:
