--- a/packages/opni-agent/opni-agent/charts/templates/rbac.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac.yaml
@@ -116,6 +116,9 @@ rules:
   - prometheuses
   - prometheuses/status
   - prometheuses/finalizers
+  - prometheusagents
+  - prometheusagents/status
+  - prometheusagents/finalizers
   - thanosrulers
   - thanosrulers/finalizers
   - servicemonitors
