--- a/packages/opni/opni/charts/Chart.yaml
+++ b/packages/opni/opni/charts/Chart.yaml
@@ -13,9 +13,9 @@ dependencies:
 - condition: opni-agent.enabled
   name: opni-agent
   repository: file://./charts/opni-agent
-- condition: opni-prometheus-crd.enabled
-  name: opni-prometheus-crd
-  repository: file://./charts/opni-prometheus-crd
+- condition: prometheus-crds.enabled
+  name: prometheus-crds
+  repository: file://./charts/prometheus-crds
 description: Multi Cluster Observability with AIOps
 icon: https://raw.githubusercontent.com/rancher/opni-docs/main/docs/assets/icon-opni.svg
 keywords:
