Allow overriding the oci chart repo name; fix oci charts pushing to the wrong repo

--- a/dagger/ci/defaults.toml
+++ b/dagger/ci/defaults.toml
@@ -9,7 +9,7 @@ test = true
 	username = "Rancher Bot"
 
 [charts.oci]
-	repo = "docker.io"
+	repo = "docker.io/rancher"
 
 [images.opni]
 	repo = "docker.io/rancher/opni"
