--- a/packages/opni/opni/charts/templates/rbac.yaml
+++ b/packages/opni/opni/charts/templates/rbac.yaml
@@ -36,6 +36,14 @@ metadata:
     {{- include "opni.labels" . | nindent 4 }}
 rules:
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
