Collect kube-apiserver audit logs path
Signed-off-by: Joao Henri <joao.rocha@suse.com>

--- a/config/crd/bases/logging.opni.io_collectorconfigs.yaml
+++ b/config/crd/bases/logging.opni.io_collectorconfigs.yaml
@@ -39,6 +39,11 @@ spec:
                   logPath:
                     type: string
                 type: object
+              kubeAuditLogs:
+                properties:
+                  logPath:
+                    type: string
+                type: object
               provider:
                 enum:
                 - aks
