Fix audit logs mount and enable by default
Signed-off-by: Joao Henri <joao.rocha@suse.com>

--- a/config/crd/bases/logging.opni.io_collectorconfigs.yaml
+++ b/config/crd/bases/logging.opni.io_collectorconfigs.yaml
@@ -41,6 +41,8 @@ spec:
                 type: object
               kubeAuditLogs:
                 properties:
+                  enabled:
+                    type: boolean
                   logPath:
                     type: string
                 type: object
