websocket streaming bugfixes + implementation work in progress

--- a/web/pkg/opni/package.json
+++ b/web/pkg/opni/package.json
@@ -2,6 +2,7 @@
   "name": "opni",
   "description": "Opni admin panel which aids in the management of relevant resources",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": false,
   "rancher": true,
   "scripts": {
