--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "opni",
   "version": "0.1.1",
+  "license": "Apache-2.0",
   "private": false,
   "engines": {
     "node": "18"
@@ -36,6 +37,7 @@
     "build:service-generator": "(cd ./service-generator && yarn install && yarn build)",
     "docker": "docker build -t opni-ui -f ./Dockerfile .",
     "build": "IS_STANDALONE=true ./node_modules/.bin/vue-cli-service build",
+    "build:watch": "NODE_ENV=dev IS_STANDALONE=true ./node_modules/.bin/vue-cli-service build --watch",
     "start": "node prod.js"
   },
   "devDependencies": {
