--- a/web/service-generator/package.json
+++ b/web/service-generator/package.json
@@ -2,6 +2,7 @@
   "name": "service-generator",
   "version": "0.0.1",
   "description": "Stuff",
+  "license": "Apache-2.0",
   "bin": {
     "service-generator": "generate"
   },
