fix protobuf message encoding in generated typescript code, and use wire format instead of json to ensure consistency between languages

--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "node": "18"
   },
   "dependencies": {
+    "@bufbuild/protobuf": "^1.3.0",
     "@rancher/shell": "^0.3.16",
     "@types/lodash": "^4.14.194",
     "chart.js": "^3.9.1",
@@ -39,8 +40,5 @@
     "build": "IS_STANDALONE=true ./node_modules/.bin/vue-cli-service build",
     "build:watch": "NODE_ENV=dev IS_STANDALONE=true ./node_modules/.bin/vue-cli-service build --watch",
     "start": "node prod.js"
-  },
-  "devDependencies": {
-    "@bufbuild/protobuf": "1.2.1"
   }
 }
