--- a/web/pkg/opni/tsconfig.json
+++ b/web/pkg/opni/tsconfig.json
@@ -35,6 +35,9 @@
       ],
       "@components/*": [
         "@rancher/components/*"
+      ],
+      "@pkg/*": [
+        "../../pkg/*"
       ]
     }
   },
