work in progress: shared cluster data store; migrate to generated grpc service apis

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -2,18 +2,20 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
+    "rootDir": ".",
+    "incremental": true,
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
-      "DOM"
+      "DOM",
+      "ScriptHost"
     ],
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": false,
     "strict": true,
     "noEmit": true,
-    "baseUrl": ".",
     "paths": {
       "~/*": [
         "./*"
@@ -26,6 +28,9 @@
       ],
       "@pkg/*": [
         "./pkg/*"
+      ],
+      "@components/*": [
+        "@rancher/components/*"
       ]
     },
     "typeRoots": [
